--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -24,20 +24,26 @@
             android:text="暂无"
             tools:ignore="MissingConstraints"
             android:focusable="true" />
-        <com.baidu.mapapi.map.MapView
-            android:id="@+id/mMapView"
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:clickable="true"
-            android:focusable="true" />
-        <ImageButton
-            android:visibility="gone"
-            android:id="@+id/ib_location"
-            android:layout_margin="8dp"
-            android:onClick="resetLocation"
-            android:background="@drawable/icon_location"
-            android:layout_width="40dp"
-            android:layout_height="40dp"/>
+            android:layout_height="wrap_content">
+            <com.baidu.mapapi.map.MapView
+                android:id="@+id/mMapView"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:clickable="true"
+                android:focusable="true" />
+
+            <ImageButton
+                android:id="@+id/ib_location"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_alignParentStart="true"
+                android:layout_centerVertical="true"
+                android:background="@drawable/icon_location"
+                android:onClick="resetLocation" />
+        </RelativeLayout>
+
     </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
