--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -49,6 +49,7 @@
         android:hint="@string/psw_login_user_id_edit"
         android:inputType="number"
         android:maxLines="1"
+        android:text="100006"
         android:textSize="14sp"
         app:layout_constraintBottom_toTopOf="@+id/userPsw"
         app:layout_constraintEnd_toEndOf="parent"
@@ -73,6 +74,7 @@
         android:hint="@string/psw_login_user_psw_edit"
         android:inputType="textPassword"
         android:maxLines="1"
+        android:text="123456"
         android:textSize="14sp"
         app:layout_constraintBottom_toTopOf="@+id/pswLoginCode"
         app:layout_constraintEnd_toEndOf="@+id/userId"
@@ -96,7 +98,7 @@
         android:autofillHints="loginCode"
         android:hint="@string/psw_login_code_edit"
         android:inputType="text"
-        android:maxLength="1"
+        android:maxLines="1"
         android:textSize="14sp"
         app:layout_constraintBottom_toTopOf="@+id/guideline2"
         app:layout_constraintStart_toStartOf="@+id/userPsw"
