--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,14 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ui.fragment.NavHomeFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <Button
+        android:id="@+id/noticeListButton"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="这是home fragment" />
+        android:layout_height="wrap_content"
+        android:text="公告列表"
+        app:layout_constraintBottom_toTopOf="@+id/affairListBtn"
+        app:layout_constraintTop_toTopOf="parent" />
 
-</FrameLayout>
+    <Button
+        android:id="@+id/addAffairBtn"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="申请事务"
+        app:layout_constraintBottom_toTopOf="@+id/reviewAffairBtn"
+        app:layout_constraintTop_toBottomOf="@+id/affairListBtn" />
+
+    <Button
+        android:id="@+id/affairListBtn"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="事务列表"
+        app:layout_constraintBottom_toTopOf="@+id/addAffairBtn"
+        app:layout_constraintTop_toBottomOf="@+id/noticeListButton" />
+
+    <Button
+        android:id="@+id/reviewAffairBtn"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="事务审核"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/addAffairBtn" />
+</androidx.constraintlayout.widget.ConstraintLayout>
