--- a/app/src/main/res/layout/fragment_punch_map.xml
+++ b/app/src/main/res/layout/fragment_punch_map.xml
@@ -2,7 +2,6 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/frameLayout3"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ui.fragment.PunchMapFragment">
@@ -13,8 +12,17 @@
         android:layout_height="wrap_content"
         android:gravity="center"
         android:text="签到"
-        app:layout_constraintBottom_toTopOf="@+id/locationText"
+        app:layout_constraintBottom_toTopOf="@+id/punchOutButton"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/punchOutButton"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:text="签退"
+        app:layout_constraintBottom_toTopOf="@+id/locationText"
+        app:layout_constraintTop_toBottomOf="@+id/punchInButton" />
 
     <TextView
         android:id="@+id/locationText"
@@ -24,7 +32,7 @@
         android:focusable="true"
         android:text="暂无"
         app:layout_constraintBottom_toTopOf="@+id/relativeLayout"
-        app:layout_constraintTop_toBottomOf="@+id/punchInButton"
+        app:layout_constraintTop_toBottomOf="@+id/punchOutButton"
         tools:ignore="MissingConstraints" />
 
     <RelativeLayout
@@ -42,12 +50,20 @@
             android:focusable="true" />
 
         <ImageButton
-            android:id="@+id/ib_location"
+            android:id="@+id/icon_location"
             android:layout_width="40dp"
             android:layout_height="40dp"
             android:layout_alignParentStart="true"
             android:layout_centerVertical="true"
             android:background="@drawable/icon_location" />
+        <ImageButton
+            android:id="@+id/icon_markb"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_alignParentEnd="true"
+            android:layout_centerVertical="true"
+            android:background="@drawable/icon_markb" />
     </RelativeLayout>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
