初步完成安卓;完善公告recycleView滑动逻辑;完善仓库层token初次加载为null逻辑处理

--- a/app/src/main/res/layout/fragment_notice_list.xml
+++ b/app/src/main/res/layout/fragment_notice_list.xml
@@ -5,6 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:minHeight="1px"
     tools:context=".ui.notice.NoticeListFragment">
 
     <androidx.recyclerview.widget.RecyclerView
